--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "proptypes": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
